--- a/Leaflet-Part-1/static/css/style.css
+++ b/Leaflet-Part-1/static/css/style.css
@@ -8,3 +8,22 @@ body,
 html {
   height: 100%;
 }
+
+#legend {font-family: Arial, sans-serif;
+  background: #fff;
+  padding: 10px;
+  margin: 10px;
+  border: 3px solid #000;
+}
+
+#legend .circle {
+  display: inline-block;
+  width: 18px;
+  height: 19px;
+  border: 1px solid #000;
+  border-radius: 50%;
+  margin-right: 8px;
+  opacity: 1;
+  padding: 0px;
+}
+
